# src/Types/Category.ts
@@ -1,4 +1,0 @@
-export default interface Category {
-    id:string
-    name:string
-}
